--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
         "michelf/php-markdown": "^1.9"
     },
     "autoload": {
-        "psr-0": { "DirProcessCopyHandlerTwig": "." }
+        "psr-0": { "DirProcessCopyHandlerTwig": "/src" }
     }
 }
